Fixing bug where the scrollbar would show even if the modal is not overflowing

--- a/web/src/components/modals/ModalContainer/ModalContainer.module.css
+++ b/web/src/components/modals/ModalContainer/ModalContainer.module.css
@@ -24,7 +24,7 @@
   position: relative;
   width: min(100%, 500px);
   max-height: 428px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .modal__author-bar {
